force-app/main/default/objects/Competitor__c/fields/competitorASP__c.field-meta.xml
<CustomField>
    <fullName>competitorASP__c</fullName>
    <label>Competitor ASP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>