force-app/main/default/objects/Competitor__c/fields/lossSource__c.field-meta.xml
<CustomField>
    <fullName>lossSource__c</fullName>
    <formula>TEXT( opportunity__r.LostReason__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loss Source</label>
    <type>Text</type>
</CustomField>